WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
119296
wrong static_casts in ANGLE
https://bugs.webkit.org/show_bug.cgi?id=119296
Summary
wrong static_casts in ANGLE
Alex Christensen
Reported
2013-07-30 17:16:17 PDT
When I updated ANGLE in
https://bugs.webkit.org/show_bug.cgi?id=118550
I added static_casts to Intermediate.cpp, but as pointed out in
https://code.google.com/p/angleproject/issues/detail?id=450
I did the wrong casts. This will cause it to return the wrong value in whatever this code does, especially with my cast to bool instead of int. I suggest this be fixed immediately.
Attachments
Patch
(5.46 KB, patch)
2013-07-30 17:19 PDT
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Patch
(5.46 KB, patch)
2013-07-30 17:24 PDT
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2013-07-30 17:19:46 PDT
Created
attachment 207789
[details]
Patch
WebKit Commit Bot
Comment 2
2013-07-30 17:22:12 PDT
Attachment 207789
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/ThirdParty/ANGLE/ChangeLog', u'Source/ThirdParty/ANGLE/src/compiler/Intermediate.cpp', u'Source/ThirdParty/ANGLE/src/compiler/intermediate.h']" exit_code: 1 Source/ThirdParty/ANGLE/src/compiler/Intermediate.cpp:1406: Tests for true/false, null/non-null, and zero/non-zero should all be done without equality comparisons. [readability/comparison_to_zero] [5] Total errors found: 1 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Alex Christensen
Comment 3
2013-07-30 17:24:24 PDT
Created
attachment 207790
[details]
Patch
WebKit Commit Bot
Comment 4
2013-07-30 17:27:03 PDT
Attachment 207790
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/ThirdParty/ANGLE/ChangeLog', u'Source/ThirdParty/ANGLE/src/compiler/Intermediate.cpp', u'Source/ThirdParty/ANGLE/src/compiler/intermediate.h']" exit_code: 1 Source/ThirdParty/ANGLE/src/compiler/Intermediate.cpp:1406: Tests for true/false, null/non-null, and zero/non-zero should all be done without equality comparisons. [readability/comparison_to_zero] [5] Total errors found: 1 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 5
2013-08-01 13:19:50 PDT
Comment on
attachment 207790
[details]
Patch Clearing flags on attachment: 207790 Committed
r153600
: <
http://trac.webkit.org/changeset/153600
>
WebKit Commit Bot
Comment 6
2013-08-01 13:19:52 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug