Fixed wrong static_casting in ANGLE from r153064. https://bugs.webkit.org/show_bug.cgi?id=119296

Reviewed by Dean Jackson.

* src/compiler/Intermediate.cpp:
(TIntermediate::promoteConstantUnion):
Undid erroneous static_cast change.
* src/compiler/intermediate.h:
(TIntermConstantUnion::getIConst):
(TIntermConstantUnion::getFConst):
(TIntermConstantUnion::getBConst):
Made getters use size_t instead of int.


Canonical link: https://commits.webkit.org/137351@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@153600 268f45cc-cd09-0410-ab3c-d52691b4dbfc